// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-entities.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>Some escaped characters: &lt; &gt; &amp;</p>
=====================================output=====================================
<p>Some escaped characters: &lt; &gt; &amp;</p>
================================================================================
`;

exports[`mustache.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title="foo \\{{"> \\{{ </div>
<div class=" bar \\{{">\\{{</div>

=====================================output=====================================
<div title="foo \\{{"> \\{{ </div>
<div class="bar \\{{">\\{{</div>
================================================================================
`;

exports[`numeric-entities.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<span class="stampFont" style="font-family: 'stampfont'">&#xf000;</span>

Σ: &#931; &#0931; &#x3A3; &#x03A3; &#x3a3;

[&amp;nbsp;] [&amp;#160;]

<div title="A &amp; &#931;"></div>

<a title="&#38;#160;"></a>

=====================================output=====================================
<span class="stampFont" style="font-family: 'stampfont'">&#xf000;</span>

Σ: &#931; &#0931; &#x3A3; &#x03A3; &#x3a3; [&amp;nbsp;] [&amp;#160;]

<div title="A &amp; &#931;"></div>

<a title="&#38;#160;"></a>
================================================================================
`;
